Change History
==============

1.7.12 (unreleased)

- Delete confirmation cleanup wasn't working; fixed.
  [smcmahon]

- Edit/delete icons missing in quickeditor in 4.3. Fixed.
  [smcmahon]

- QuickEdit toolbox covered by footer in sunburst 4.3. Fixed.
  [smcmahon]

1.7.10 (brown bag)
-------------------

- Nothing changed yet.


1.7.9 (2013-05-29)
------------------

- Remove doc string for @@gpg_services/encrypt. (Thanks, The Code Distillery)
  [smcmahon]

- Clean up Popen handling in encryption, add some logging. (Thanks, The Code Distillery)
  [smcmahon]

- Remove undesirable doc strings from custom script adapter methods. Add
  private declarations.
  (Thanks, The Code Distillery)
  [smcmahon]

- Remove undesirable doc strings, set private on mail adapter's setBody_pt.
  (Thanks, The Code Distillery)
  [smcmahon]

- remove undesirable doc string from fgGetSuccessAction.
  (Thanks, The Code Distillery)
  [smcmahon]

- Add traversal hacks to block TTW reads of several text, template, tales and python
  attributes.
  (Thanks, The Code Distillery)
  [smcmahon]

- remove undesirable doc string from onSuccess.
  (Thanks, The Code Distillery)
  [smcmahon]

- Protect "member*" convenience methods from traversal TTW.
  (Thanks, The Code Distillery)
  [smcmahon]

- Add plone.protect auth checks to quick editor AJAX functions.
  (Thanks, The Code Distillery)
  [smcmahon]

- Require authenticator for clearing form data TTW
  [smcmahon]


1.7.8 2012-04-10
----------------

- Added zcml autoinclude. Looks like "Products" packages are no longer blessed.
  [smcmahon

1.7.7 2012-03-18
----------------

- Added inline js to fg_base_viewp3.cpt to disable Plone 4.3's non-kss
  inline validation for Archetypes. Note that this depends on a fix pushed
  to 4.3.x after 4.3rc1. Without that fix, inline validation will be
  attempted anyway; it's invisible except for log entries.
  [smcmahon]

- Fix incompatability of localtime formatting for datetime fields
  with Plone 4.3.